Fixed cursor not showing on hamburger

--- a/assets/sass/partials/_header.scss
+++ b/assets/sass/partials/_header.scss
@@ -54,6 +54,12 @@
             margin-left: 20px;
         }
     }
+    .hamburger{
+        cursor: $hover;
+        &:active{
+            cursor: $click;
+        }
+    }
     .hamburger-box {
         vertical-align: middle;
     }
